--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,16 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Temporary files
+cookies.txt
+*.tmp
+*.temp
+*.bak
+*.swp
+*.swo
+*~
+
+# Test files
+test_*.py
+*_test.py
